@@ -1,3 +1,5 @@
+- display erasure progress too
+
 Version 7.15.2 - 16 January 2013, by Thierry Vignaud
 
 - update translations
